fix alignment

--- a/public/css/penguin.css
+++ b/public/css/penguin.css
@@ -81,7 +81,7 @@ a {
 
 .content > ul > li > a::after {
   content: '\203A';
-  margin-left: 5px;
+  margin-left: 8px;
   margin-right: 0;
   color: #000;
 }
